--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -894,7 +894,7 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    @foreach (var item in Model.ModuliINFOGA) { 
+                                    @foreach (var item in Model.ModuliWIFITE) { 
                                     <tr>
                                         <td>
                                            <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
