--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -3,7 +3,7 @@
  <div class="container">
     <h2>Nuovo Progetto</h2>
     <hr />
-    <div class="row panel panel-default col-md-9">
+    <div class="row panel panel-default col-md-10" style="margin:0 auto; float:none">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
           <div class="col-sm-12">
@@ -12,28 +12,23 @@
                 <input asp-for="Nome" class="form-control"  placeholder="nome"/>
                 <span asp-validation-for="Nome" class="text-danger"></span><br>
             </div>                
-                <div class="form-group col-md-6"><br>
-                    
-                </div>
-                </div>
-                
-                <div class="form-group ">
+                <div class="form-group col-sm-12 ">
                 <label for="descrizione">Descrizione</label>
                 <textarea class="form-control" id="descrizione" placeholder="descrizione" rows="5" cols="40" style="resize:none"
                     maxlength="1000" asp-for="Descrizione"></textarea>
                     <span asp-validation-for="Descrizione" class="text-danger"></span><br>
             </div>
-            
-           
-            <div class="container">
-            <div class="form-group col-6 ">
-                <input type="submit" value="Crea" class="btn btn-default" /> |
-                  <a asp-action="Index">Torna alla lista</a>
+            <div class="col-sm-6 col-sm-offset-6 text-right">
+                                            <div class="form-group">
+                                                <input type="submit" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                <a asp-action="Index">  Torna alla lista</a>
+                                            </div>
+                                        </div>
+             
             </div>
-            </div>
-            
-                  
         </form>
+    </div>
+    <br>
     </div>
  
   
